compiler/weave_syntax/tests/data/syntax/expressions/match-pattern-0001.source
match (x)
{
    case (_, 0): WriteLine("Zero");
    case (1, _): WriteLine("One");
    case (2, _): WriteLine("Two");
    default: WriteLine("Many");
}

match (y)
{
    case [_, (2, _, 3, 7), 49]: WriteLine("Matched");
    default: WriteLine("Not matched") 
}

match (z)
{
    case ([_, 2, _], [1, _, xx], ([_, yy], (zz), [2, _, 3, _, 69])):
        {
            WriteLine("Matched");
        }
    default:
        {
            WriteLine("Not matched");
        }
}

match (w)
{
    case SomeStruct{ a: Some(n), b: [_, 21, _, 37]}:
        {
            matched();
        }
    case A | B | C | D:
        {
            matched();
        }
    default:
        {
            unmatched();
        }
}

match (q)
{
    case A : { matched(); }
    case A | : { matched(); }
    case A | B : { matched(); }
    case A | B | : { matched(); }
    case A | B | C : { matched(); }
    default: { unmatched(); }
}
